# QtFeatureHub

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/customize/: customtitlebar.cpp  customtitlebar.h  framelesshelper.cpp  framelesshelper.h  framelesswindow.cpp  framelesswindow.h
src/database/: databasemanager.cpp  databasemanager.h
src/dialogs/: mydialog.cpp  mydialog.h  mydialog.ui
src/widgets/: codewindow.cpp  codewindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  openglwindow.h  pdfviewer.cpp  pdfviewer.h  pdfviewer.ui  testcontrols.cpp  testcontrols.h  testcontrols.ui
